--- a/Projeto 2/index.html
+++ b/Projeto 2/index.html
@@ -19,8 +19,8 @@
   <script src="app/app.js"></script>
   <nav>
     <ul>
-      <li class="ativo"><a href="#">Home</a></li>
-      <li><a href="#">Quem Somos?</a></li>
+      <li class="ativo"><a href="index.html">Home</a></li>
+      <li><a href="quemsomos.html">Quem Somos?</a></li>
       <li><a href="#">Produtos</a></li>
       <li><a href="#">Teste Gratis</a></li>
       <li><a href="#">Contatos</a></li>
@@ -39,7 +39,9 @@
 <div class="imagens">
   <img src="images/home.png" alt="Crm Leafour">
 </div> 
+<div class="button">
 <a href="https://wipsites.com.br"><button>TESTE GRÁTIS</button></a>
+</div>
 </body>
 
 </html>
