--- a/Projeto 2/index.html
+++ b/Projeto 2/index.html
@@ -21,9 +21,9 @@
     <ul>
       <li class="ativo"><a href="index.html">Home</a></li>
       <li><a href="quemsomos.html">Quem Somos?</a></li>
-      <li><a href="#">Produtos</a></li>
-      <li><a href="#">Teste Gratis</a></li>
-      <li><a href="#">Contatos</a></li>
+      <li><a href="produtos.html">Produtos</a></li>
+      <li><a href="teste gratis.html">Teste Gratis</a></li>
+      <li><a href="contatos.html">Contatos</a></li>
     </ul>
     <img src="images/logo.png" alt="images">
   </nav>
@@ -40,7 +40,7 @@
   <img src="images/home.png" alt="Crm Leafour">
 </div> 
 <div class="button">
-<a href="https://wipsites.com.br"><button>TESTE GRÁTIS</button></a>
+<a href="teste gratis.html"><button>TESTE GRÁTIS</button></a>
 </div>
 </body>
 
